<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:background="@color/fondo_casillas"
        android:ems="10"
        android:hint="@string/escriba_su_nombre"
        android:inputType="text"
        android:minHeight="48dp"
        android:text=""
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="24sp"
        tools:ignore="VisualLintTextFieldSize" />

    <RadioGroup
        android:id="@+id/rg_estadocivil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_soltero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/soltero"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_casado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/casado"
            android:textSize="24sp"
            tools:text="Casado" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/ly_delegacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_delegacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delegacion"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/sp_ciudades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/delegacion"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_futbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/futbol"
        android:textSize="24sp"
        tools:ignore="VisualLintButtonSize" />
    <CheckBox
        android:id="@+id/cb_baloncesto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baloncesto"
        android:textSize="24sp"
        tools:ignore="VisualLintButtonSize" />
    <CheckBox
        android:id="@+id/cb_tennis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tenis"
        android:textSize="24sp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/b_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />

    <Spinner
        android:id="@+id/sp_datosusuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp" />

</LinearLayout>